ec2.tf
# key-pair

resource "aws_key_pair" "my_key" {
    
    key_name = "terra-key-ec2"
    public_key = file("mykey.pub")

}

#VPC& security

resource "aws_default_vpc" "default" {
  
}

resource "aws_security_group" "my_security_group" {
  
      name="automate_sg"
      description = "Automation Security Group"
      vpc_id = aws_default_vpc.default.id # interpolation reference to above 
      ingress {
        from_port = 22
        to_port = 22
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        description = "SSH Open"
      }
      
      ingress {
        from_port = 80
        to_port = 80
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        description = "HTTP Open"

      }
      ingress {
        from_port = 8000
        to_port = 8000
        protocol = "tcp"
        cidr_blocks = ["0.0.0.0/0"]
        description = "Notes APP"
        

      }

      egress{
        from_port = 0
        to_port = 0
        protocol = "-1"
        cidr_blocks = ["0.0.0.0/0"]
         description = "all access"
      }


    tags = {
     Name = "allow_tls"
    }
}


resource "aws_instance" "my_instance" {
  key_name=aws_key_pair.my_key.key_name
  security_groups = [aws_security_group.my_security_group.name]
  instance_type = "t2.micro"
  ami="ami-03aa99ddf5498ceb9"
  root_block_device {
    volume_size = 15
    volume_type = "gp3"
  }
  tags = {
    Name="VenkatTerraform"
    
  }
}
